--- a/css/main.css
+++ b/css/main.css
@@ -91,24 +91,112 @@
   }
 }
 
-/* navbar-btn-toggled */
-#navbar-toggle-btn:hover hr:nth-child(1) {
-  transform: translateY(8px) rotate(45deg);
+/* ------------------------------------ */
+/* *** Navbar toggle button effects *** */
+/* ------------------------------------ */
+.navbar-toggle-active hr:nth-child(1) {
+  animation-name: turnBlueHR;
+  animation-duration: 0.5s;
+  animation-fill-mode: forwards;
 }
 
-#navbar-toggle-btn:hover hr:nth-child(2) {
-  display: none;
+.navbar-toggle-active hr:nth-child(2) {
+  animation-name: turnLightBlueHR;
+  animation-duration: 0.5s;
+  animation-fill-mode: forwards;
 }
 
-#navbar-toggle-btn:hover hr:nth-child(3) {
-  transform: translateY(-8px) rotate(-45deg);
+.navbar-toggle-active hr:nth-child(3) {
+  animation-name: turnPinkHR;
+  animation-duration: 0.5s;
+  animation-fill-mode: forwards;
+}
+
+@keyframes turnBlueHR {
+  to {
+    transform: translateY(8px) rotate(45deg);
+  }
+}
+
+@keyframes turnLightBlueHR {
+  to {
+    transform: rotate(90deg);
+    opacity: 0;
+  }
+}
+
+@keyframes turnPinkHR {
+  to {
+    transform: translateY(-8px) rotate(-45deg);
+  }
+}
+
+/* *** Button inactive state *** */
+.navbar-toggle-inactive hr:nth-child(1) {
+  animation-name: turnBlueHRback;
+  animation-duration: 0.5s;
+}
+
+.navbar-toggle-inactive hr:nth-child(2) {
+  animation-name: turnLightBlueHRback;
+  animation-duration: 0.5s;
+}
+
+.navbar-toggle-inactive hr:nth-child(3) {
+  animation-name: turnPinkHRback;
+  animation-duration: 0.5s;
+}
+
+@keyframes turnBlueHRback {
+  from {
+    transform: translateY(8px) rotate(45deg);
+  }
+  to {
+    transform: translateY(0px) rotate(0deg);
+  }
+}
+
+@keyframes turnLightBlueHRback {
+  from {
+    opacity: 0;
+    transform: rotate(90deg);
+  }
+  to {
+    opacity: 1;
+    transform: rotate(0deg);
+  }
+}
+
+@keyframes turnPinkHRback {
+  from {
+    transform: translateY(-8px) rotate(-45deg);
+  }
+  to {
+    transform: translateY(0px) rotate(0deg);
+  }
+}
+
+/* *** Navbar toggle button effects end *** */
+/* ------------------------------------ */
+/**not used */
+@keyframes bouncing {
+  0%,
+  50%,
+  100% {
+    /* OR from, 50%, to */
+    top: 0;
+  }
+  25%,
+  75% {
+    top: 100px;
+  }
 }
 
 /* List of used predefined screen sizes */
 /* -------------------------------*/
 /*        Navbar Component        */
 /* ------------------------------ */
-.active {
+.active-link {
   color: #489cf7 !important;
 }
 
@@ -142,6 +230,7 @@
   background-color: #323232;
   width: 45px;
   height: 45px;
+  min-width: 45px;
   cursor: pointer;
 }
 
@@ -221,7 +310,7 @@
 }
 
 @media only screen and (max-width: 768px) {
-  .navbar ul:first-of-type {
+  .navbar ul {
     display: none;
   }
   #navbar-toggle-btn {
