--- a/scss/_navbar.scss
+++ b/scss/_navbar.scss
@@ -2,7 +2,7 @@
 /*        Navbar Component        */
 /* ------------------------------ */
 
-.active {
+.active-link {
   color: $blue-lake !important;
 }
 
@@ -31,6 +31,7 @@
   justify-content: center;
   background-color: $gray;
   @include setSquare(45px);
+  min-width: 45px;
   cursor: pointer;
   div {
     display: flex;
@@ -110,7 +111,7 @@
 
 @media only screen and (max-width: setBreakpoint(medium)) {
   .navbar {
-    ul:first-of-type {
+    ul {
       display: none;
     }
   }
