--- a/scss/_navbar.scss
+++ b/scss/_navbar.scss
@@ -10,7 +10,7 @@
   display: flex;
   flex-direction: column;
   justify-content: center;
-  height: 60px;
+  height: 100%;
 }
 
 .navbar-item {
@@ -118,7 +118,7 @@
 
 @media only screen and (max-width: setBreakpoint(medium)) {
   .navbar {
-    ul {
+    .navbar-container:nth-child(2) {
       display: none;
     }
   }
@@ -126,9 +126,55 @@
     display: flex !important;
   }
 }
-
-/* @media only screen and (max-device-width: setBreakpoint(medium)) {
-  .navbar {
-    background: saddlebrown;
+@media only screen and (min-width: setBreakpoint(medium)) {
+  .sidenav {
+    display: none;
   }
+}
+
+/* -------------------------------*/
+/*      SideNavbar Component      */
+/* ------------------------------ */
+
+.sidenav {
+  height: 100%;
+  width: 0;
+  position: fixed;
+  z-index: 1;
+  top: 75px;
+  left: 0;
+  background-color: $black;
+  overflow-x: hidden;
+  transition: 0.6s;
+}
+
+.side-navbar-container {
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  padding-left: 12px;
+}
+
+.side-navbar-item {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+  height: 180px;
+  list-style-type: none;
+  a {
+    color: white;
+    text-decoration: none;
+  }
+}
+/* 
+.sidenav a {
+  padding: 8px 8px 8px 32px;
+  text-decoration: none;
+  color: #818181;
+  display: block;
+  transition: 0.3s;
+}
+
+.sidenav a:hover {
+  color: #f1f1f1;
 } */
