--- a/css/main.css
+++ b/css/main.css
@@ -358,6 +358,7 @@
   flex-direction: column;
   justify-content: space-evenly;
   height: 180px;
+  font-size: 0.9rem;
   list-style-type: none;
 }
 
