--- a/scss/_navbar.scss
+++ b/scss/_navbar.scss
@@ -160,6 +160,7 @@
   flex-direction: column;
   justify-content: space-evenly;
   height: 180px;
+  font-size: 0.9rem;
   list-style-type: none;
   a {
     color: white;
