--- a/scss/_navbar.scss
+++ b/scss/_navbar.scss
@@ -10,15 +10,15 @@
   display: flex;
   flex-direction: column;
   justify-content: center;
-  height: 100%;
 }
 
 .navbar-item {
   display: flex;
   flex-direction: row;
-  justify-content: space-between;
-  list-style-type: none;
   align-items: center;
+  justify-content: space-between;
+  width: 50%;
+  list-style-type: none;
   a {
     color: white;
     text-decoration: none;
@@ -29,10 +29,12 @@
   @include bg-gradient($blue-dark, $pink-dark);
   padding: 2px;
   cursor: pointer;
+  @include setImgSize(60px);
   img {
     @include setImgSize(60px);
   }
 }
+
 #navbar-toggle-btn {
   display: flex;
   justify-content: center;
@@ -69,20 +71,23 @@
   right: 0;
   display: flex;
   flex-direction: row;
-  flex-wrap: nowrap;
   justify-content: space-between;
   align-items: center;
   padding: 0.3rem;
   background: $black;
   z-index: 1;
-  ul:first-of-type {
-    font-size: 1.1rem;
-    li {
-      a {
-        color: $gray-light;
-      }
-      a:hover {
-        color: $blue-lake;
+  .navbar-container:nth-child(2) {
+    width: 30%;
+    ul {
+      width: 100%;
+      font-size: 1.1rem;
+      li {
+        a {
+          color: $gray-light;
+        }
+        a:hover {
+          color: $blue-lake;
+        }
       }
     }
   }
@@ -101,10 +106,54 @@
   }
 }
 
+/* -------------------------------*/
+/*      SideNavbar Component      */
+/* ------------------------------ */
+
+.sidenav {
+  position: fixed;
+  height: auto;
+  width: 0;
+  top: 75px;
+  left: 0;
+  z-index: 1;
+  background-color: $black;
+  overflow-x: hidden;
+  transition: 0.6s;
+  padding-top: 3px;
+  padding-bottom: 3px;
+  .navbar-container {
+    align-items: center;
+    font-size: 0.9rem;
+    li {
+      a {
+        color: $gray-light;
+      }
+      a:hover {
+        color: $blue-lake;
+      }
+    }
+  }
+}
+
+/* *** Responsive settings *** */
+@media only screen and (max-width: setBreakpoint(huge)) {
+  .navbar {
+    .navbar-container:nth-child(2) {
+      width: 35%;
+      li {
+        font-size: 1rem;
+      }
+    }
+  }
+}
+
 @media only screen and (max-width: setBreakpoint(large)) {
   .navbar {
-    ul:first-of-type {
-      font-size: 0.9rem;
+    .navbar-container:nth-child(2) {
+      li {
+        font-size: 0.9rem;
+      }
     }
     ul:last-of-type {
       li {
@@ -121,61 +170,29 @@
     .navbar-container:nth-child(2) {
       display: none;
     }
+    #navbar-toggle-btn {
+      display: flex !important;
+    }
   }
-  #navbar-toggle-btn {
-    display: flex !important;
+  #side-navbar {
+    .navbar-item {
+      font-size: 0.8rem;
+      width: 60%;
+    }
   }
 }
+
+@media only screen and (max-width: setBreakpoint(small)) {
+  #side-navbar {
+    .navbar-item {
+      font-size: 0.8rem;
+      width: 70%;
+    }
+  }
+}
+
 @media only screen and (min-width: setBreakpoint(medium)) {
   .sidenav {
     display: none;
   }
 }
-
-/* -------------------------------*/
-/*      SideNavbar Component      */
-/* ------------------------------ */
-
-.sidenav {
-  height: 100%;
-  width: 0;
-  position: fixed;
-  z-index: 1;
-  top: 75px;
-  left: 0;
-  background-color: $black;
-  overflow-x: hidden;
-  transition: 0.6s;
-}
-
-.side-navbar-container {
-  display: flex;
-  flex-direction: column;
-  justify-content: flex-start;
-  padding-left: 12px;
-}
-
-.side-navbar-item {
-  display: flex;
-  flex-direction: column;
-  justify-content: space-evenly;
-  height: 180px;
-  font-size: 0.9rem;
-  list-style-type: none;
-  a {
-    color: white;
-    text-decoration: none;
-  }
-}
-/* 
-.sidenav a {
-  padding: 8px 8px 8px 32px;
-  text-decoration: none;
-  color: #818181;
-  display: block;
-  transition: 0.3s;
-}
-
-.sidenav a:hover {
-  color: #f1f1f1;
-} */
