--- a/scss/main.scss
+++ b/scss/main.scss
@@ -2,5 +2,7 @@
 @import "utilities";
 @import "animations";
 @import "responsive";
-@import "navbar";
+@import "components/modal";
+@import "components/navbar";
+@import "components/burger-btn";
 @import "page";
