--- a/css/main.css
+++ b/css/main.css
@@ -91,93 +91,6 @@
   }
 }
 
-/* ------------------------------------ */
-/* *** Navbar toggle button effects *** */
-/* ------------------------------------ */
-.navbar-toggle-active hr:nth-child(1) {
-  animation-name: turnBlueHR;
-  animation-duration: 0.5s;
-  animation-fill-mode: forwards;
-}
-
-.navbar-toggle-active hr:nth-child(2) {
-  animation-name: turnLightBlueHR;
-  animation-duration: 0.5s;
-  animation-fill-mode: forwards;
-}
-
-.navbar-toggle-active hr:nth-child(3) {
-  animation-name: turnPinkHR;
-  animation-duration: 0.5s;
-  animation-fill-mode: forwards;
-}
-
-@keyframes turnBlueHR {
-  to {
-    transform: translateY(8px) rotate(45deg);
-  }
-}
-
-@keyframes turnLightBlueHR {
-  to {
-    transform: rotate(90deg);
-    opacity: 0;
-  }
-}
-
-@keyframes turnPinkHR {
-  to {
-    transform: translateY(-8px) rotate(-45deg);
-  }
-}
-
-/* *** Button inactive state *** */
-.navbar-toggle-inactive hr:nth-child(1) {
-  animation-name: turnBlueHRback;
-  animation-duration: 0.5s;
-}
-
-.navbar-toggle-inactive hr:nth-child(2) {
-  animation-name: turnLightBlueHRback;
-  animation-duration: 0.5s;
-}
-
-.navbar-toggle-inactive hr:nth-child(3) {
-  animation-name: turnPinkHRback;
-  animation-duration: 0.5s;
-}
-
-@keyframes turnBlueHRback {
-  from {
-    transform: translateY(8px) rotate(45deg);
-  }
-  to {
-    transform: translateY(0px) rotate(0deg);
-  }
-}
-
-@keyframes turnLightBlueHRback {
-  from {
-    opacity: 0;
-    transform: rotate(90deg);
-  }
-  to {
-    opacity: 1;
-    transform: rotate(0deg);
-  }
-}
-
-@keyframes turnPinkHRback {
-  from {
-    transform: translateY(-8px) rotate(-45deg);
-  }
-  to {
-    transform: translateY(0px) rotate(0deg);
-  }
-}
-
-/* *** Navbar toggle button effects end *** */
-/* ------------------------------------ */
 /**not used */
 @keyframes bouncing {
   0%,
@@ -193,6 +106,130 @@
 }
 
 /* List of used predefined screen sizes */
+/* The Modal (background) */
+.modal {
+  z-index: 1;
+  position: absolute;
+  top: 0px;
+  left: 0px;
+  width: 100%;
+  height: 100%;
+  background: rgba(0, 0, 0, 0.5);
+  display: none;
+  justify-content: center;
+  align-items: center;
+}
+
+.main-modal {
+  width: 350px;
+  height: 300px;
+  background: #fff;
+  border-radius: 5%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+}
+
+.hideModal {
+  z-index: -1;
+  opacity: 0;
+  animation: hide 0.25s;
+  transform: scale(0);
+}
+
+@keyframes hide {
+  from {
+    z-index: 2;
+    transform: scale(1);
+    opacity: 1;
+  }
+  to {
+    z-index: -1;
+    transform: scale(0);
+    opacity: 0;
+  }
+}
+
+.showModal {
+  opacity: 1;
+  z-index: 2;
+  animation: show 0.2s;
+  transform: scale(1);
+}
+
+@keyframes show {
+  from {
+    transform: scale(0);
+    opacity: 0;
+    z-index: -1;
+  }
+  to {
+    transform: scale(1);
+    opacity: 1;
+    z-index: 2;
+  }
+}
+
+/* Modal Content (image) */
+.modal-content {
+  margin: auto;
+  display: block;
+  max-width: 25%;
+}
+
+/* Caption of Modal Image */
+#caption {
+  margin: auto;
+  display: block;
+  width: 80%;
+  max-width: 700px;
+  text-align: center;
+  color: #ccc;
+  padding: 10px 0;
+  height: 150px;
+}
+
+/* Add Animation */
+.modal-content,
+#caption {
+  animation-name: zoom;
+  animation-duration: 0.6s;
+}
+
+@keyframes zoom {
+  from {
+    transform: scale(0);
+  }
+  to {
+    transform: scale(1);
+  }
+}
+
+/* The Close Button */
+.close {
+  position: absolute;
+  top: 15px;
+  right: 35px;
+  color: #f1f1f1;
+  font-size: 40px;
+  font-weight: bold;
+  transition: 0.3s;
+}
+
+/* .close:hover,
+.close:focus {
+  color: #bbb;
+  text-decoration: none;
+  cursor: pointer;
+} */
+/* 100% Image Width on Smaller Screens */
+@media only screen and (max-width: 700px) {
+  .modal-content {
+    width: 100%;
+  }
+}
+
 /* -------------------------------*/
 /*        Navbar Component        */
 /* ------------------------------ */
@@ -233,39 +270,8 @@
   height: auto;
 }
 
-#navbar-toggle-btn {
-  display: flex;
-  justify-content: center;
-  background-color: #323232;
-  width: 45px;
-  height: 45px;
-  min-width: 45px;
-  cursor: pointer;
-}
-
-#navbar-toggle-btn div {
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
-  width: 28px;
-  height: 19px;
-}
-
-#navbar-toggle-btn div hr {
-  height: 3px;
-  border: none;
-}
-
-#navbar-toggle-btn div hr:nth-child(1) {
-  background-color: #1a6dff;
-}
-
-#navbar-toggle-btn div hr:nth-child(2) {
-  background-color: #9aceff;
-}
-
-#navbar-toggle-btn div hr:nth-child(3) {
-  background-color: #c822ff;
+#navbar-photo img:hover {
+  opacity: 0.8;
 }
 
 .navbar {
@@ -388,6 +394,128 @@
   }
 }
 
+/* ---------------------------- */
+/* ***    Burger button     *** */
+/* ---------------------------- */
+.burger-btn {
+  display: flex;
+  justify-content: center;
+  background-color: #323232;
+  width: 45px;
+  height: 45px;
+  min-width: 45px;
+  cursor: pointer;
+}
+
+.burger-btn div {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  width: 28px;
+  height: 19px;
+}
+
+.burger-btn div hr {
+  height: 3px;
+  border: none;
+}
+
+.burger-btn div hr:nth-child(1) {
+  background-color: #1a6dff;
+}
+
+.burger-btn div hr:nth-child(2) {
+  background-color: #9aceff;
+}
+
+.burger-btn div hr:nth-child(3) {
+  background-color: #c822ff;
+}
+
+.burger-btn-active hr:nth-child(1) {
+  animation-name: turnBlueHR;
+  animation-duration: 0.3s;
+  animation-fill-mode: forwards;
+}
+
+.burger-btn-active hr:nth-child(2) {
+  animation-name: turnLightBlueHR;
+  animation-duration: 0.3s;
+  animation-fill-mode: forwards;
+}
+
+.burger-btn-active hr:nth-child(3) {
+  animation-name: turnPinkHR;
+  animation-duration: 0.3s;
+  animation-fill-mode: forwards;
+}
+
+@keyframes turnBlueHR {
+  to {
+    transform: translateY(8px) rotate(45deg);
+  }
+}
+
+@keyframes turnLightBlueHR {
+  to {
+    transform: rotate(90deg);
+    opacity: 0;
+  }
+}
+
+@keyframes turnPinkHR {
+  to {
+    transform: translateY(-8px) rotate(-45deg);
+  }
+}
+
+/* *** Button inactive state *** */
+.burger-btn-inactive hr:nth-child(1) {
+  animation-name: turnBlueHRback;
+  animation-duration: 0.3s;
+}
+
+.burger-btn-inactive hr:nth-child(2) {
+  animation-name: turnLightBlueHRback;
+  animation-duration: 0.3s;
+}
+
+.burger-btn-inactive hr:nth-child(3) {
+  animation-name: turnPinkHRback;
+  animation-duration: 0.3s;
+}
+
+@keyframes turnBlueHRback {
+  from {
+    transform: translateY(8px) rotate(45deg);
+  }
+  to {
+    transform: translateY(0px) rotate(0deg);
+  }
+}
+
+@keyframes turnLightBlueHRback {
+  from {
+    opacity: 0;
+    transform: rotate(90deg);
+  }
+  to {
+    opacity: 1;
+    transform: rotate(0deg);
+  }
+}
+
+@keyframes turnPinkHRback {
+  from {
+    transform: translateY(-8px) rotate(-45deg);
+  }
+  to {
+    transform: translateY(0px) rotate(0deg);
+  }
+}
+
+/* *** Navbar toggle button effects end *** */
+/* ------------------------------------ */
 * {
   padding: 0;
   margin: 0;
