--- a/scss/components/_navbar.scss
+++ b/scss/components/_navbar.scss
@@ -33,34 +33,8 @@
   img {
     @include setImgSize(60px);
   }
-}
-
-#navbar-toggle-btn {
-  display: flex;
-  justify-content: center;
-  background-color: $gray;
-  @include setSquare(45px);
-  min-width: 45px;
-  cursor: pointer;
-  div {
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    width: 28px;
-    height: 19px;
-    hr {
-      height: 3px;
-      border: none;
-    }
-    hr:nth-child(1) {
-      background-color: $blue-dark;
-    }
-    hr:nth-child(2) {
-      background-color: $blue-light;
-    }
-    hr:nth-child(3) {
-      background-color: $pink-dark;
-    }
+  img:hover {
+    opacity: 0.8;
   }
 }
 
